--- a/.github/workflows/geocoding2.yml
+++ b/.github/workflows/geocoding2.yml
@@ -70,7 +70,7 @@ jobs:
 # Run R script
       - name: Geocode addresses
         run: |
-          source("R/ppp-geocode-github.R")
+          source("R/ppp-geocode-github2.R")
         shell: Rscript {0} 
 
 # Add new files in data folder, commit along with other modified files, push
